force-app/main/default/objects/RegraDesconto__c/RegraDesconto__c.object-meta.xml
<CustomObject>
    <label>Regra de Desconto</label>
    <nameField>
        <displayFormat>RD-{00000000}</displayFormat>
        <label>Regra de Desconto</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Regras de Descontos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>