force-app/main/default/objects/RegraDesconto__c/fields/Campo__c.field-meta.xml
<CustomField>
    <fullName>Campo__c</fullName>
    <label>Campo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Antecedencia</fullName>
                <label>Antecedência (em dias)</label>
            </value>
            <value>
                <fullName>CatalogoPrecos</fullName>
                <label>Catálogo de Preços</label>
            </value>
            <value>
                <fullName>Cliente</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
                <label>Data do Voo</label>
            </value>
            <value>
                <fullName>Destino1</fullName>
                <label>Destino 1</label>
            </value>
            <value>
                <fullName>Destino2</fullName>
                <label>Destino 2</label>
            </value>
            <value>
                <fullName>Destino3</fullName>
                <label>Destino 3</label>
            </value>
            <value>
                <fullName>DiaSemana</fullName>
                <label>Dia da Semana</label>
            </value>
            <value>
                <fullName>Duracao</fullName>
                <label>Duração do Voo</label>
            </value>
            <value>
                <fullName>Hora</fullName>
                <label>Hora de Início</label>
            </value>
            <value>
                <fullName>Modelo</fullName>
                <label>Modelo da Aeronave</label>
            </value>
            <value>
                <fullName>Origem</fullName>
            </value>
            <value>
                <fullName>Retorno</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>