force-app/main/default/objects/RegraDesconto__c/fields/Conta__c.field-meta.xml
<CustomField>
    <fullName>Conta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Regras de Descontos</relationshipLabel>
    <relationshipName>Regras_de_Descontos</relationshipName>
    <type>Lookup</type>
</CustomField>