force-app/main/default/objects/RegraDesconto__c/fields/Operador__c.field-meta.xml
<CustomField>
    <fullName>Operador__c</fullName>
    <label>Operador</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Campo__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>=</fullName>
            </value>
            <value>
                <fullName>!=</fullName>
            </value>
            <value>
                <fullName>&gt;</fullName>
            </value>
            <value>
                <fullName>&gt;=</fullName>
            </value>
            <value>
                <fullName>&lt;</fullName>
            </value>
            <value>
                <fullName>&lt;=</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>