force-app/main/default/objects/RegraDesconto__c/fields/PoliticaDesconto__c.field-meta.xml
<CustomField>
    <fullName>PoliticaDesconto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Política de Desconto</label>
    <referenceTo>PoliticaDesconto__c</referenceTo>
    <relationshipLabel>Regras de Descontos</relationshipLabel>
    <relationshipName>RegrasDescontos</relationshipName>
    <type>Lookup</type>
</CustomField>