force-app/main/default/objects/RegraDesconto__c/fields/ValorData__c.field-meta.xml
<CustomField>
    <fullName>ValorData__c</fullName>
    <label>Valor Data</label>
    <type>Date</type>
</CustomField>