force-app/main/default/objects/RegraDesconto__c/fields/ValorDesconto__c.field-meta.xml
<CustomField>
    <fullName>ValorDesconto__c</fullName>
    <label>Valor Desconto Unitário</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>