force-app/main/default/objects/RegraDesconto__c/fields/ValorHora__c.field-meta.xml
<CustomField>
    <fullName>ValorHora__c</fullName>
    <label>Valor Hora</label>
    <type>Time</type>
</CustomField>