force-app/main/default/objects/RegraDesconto__c/fields/ValorNumerico__c.field-meta.xml
<CustomField>
    <fullName>ValorNumerico__c</fullName>
    <label>Valor Numérico</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>