force-app/main/default/objects/RegraDesconto__c/fields/ValorTexto__c.field-meta.xml
<CustomField>
    <fullName>ValorTexto__c</fullName>
    <label>Valor Texto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>