force-app/main/default/objects/RegraDesconto__c/fields/VoosAnteriores__c.field-meta.xml
<CustomField>
    <fullName>VoosAnteriores__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Voos Anteriores</label>
    <type>Checkbox</type>
</CustomField>