force-app/main/default/objects/RegraDesconto__c/validationRules/Data.validationRule-meta.xml
<ValidationRule>
    <fullName>Data</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
				ISPICKVAL(Campo__c, &apos;Data&apos;),
				OR(
								ISBLANK(ValorData__c),
								NOT(ISBLANK(ValorTexto__c)),
								NOT(ISBLANK(ValorHora__c)),
								NOT(ISBLANK(ValorNumerico__c))
				)
)</errorConditionFormula>
    <errorDisplayField>ValorData__c</errorDisplayField>
    <errorMessage>Para esse campo selecionado, preencha apenas aqui</errorMessage>
</ValidationRule>