force-app/main/default/objects/RegraDesconto__c/validationRules/DiaSemana.validationRule-meta.xml
<ValidationRule>
    <fullName>DiaSemana</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
				ISPICKVAL(Campo__c, &apos;DiaSemana&apos;),
				OR(
								ValorNumerico__c &lt; 1,
								ValorNumerico__c &gt; 7
				)
)</errorConditionFormula>
    <errorDisplayField>ValorNumerico__c</errorDisplayField>
    <errorMessage>Dia da Semana deve ser um número entre 1 e 7. Segunda = 1, Terça = 2, Quarta = 3, Quinta = 4, Sexta = 5, Sábado = 6, Domingo = 7.</errorMessage>
</ValidationRule>