force-app/main/default/objects/RegraDesconto__c/validationRules/Hora.validationRule-meta.xml
<ValidationRule>
    <fullName>Hora</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
				ISPICKVAL(Campo__c, &apos;Hora&apos;),
				OR(
								ISBLANK(ValorHora__c),
								NOT(ISBLANK(ValorTexto__c)),
								NOT(ISBLANK(ValorData__c)),
								NOT(ISBLANK(ValorNumerico__c))
				)
)</errorConditionFormula>
    <errorDisplayField>ValorHora__c</errorDisplayField>
    <errorMessage>Para esse campo selecionado, preencha apenas aqui</errorMessage>
</ValidationRule>