force-app/main/default/objects/RegraDesconto__c/validationRules/Numerico.validationRule-meta.xml
<ValidationRule>
    <fullName>Numerico</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
				OR(
								ISPICKVAL(Campo__c, &apos;Duracao&apos;),
								ISPICKVAL(Campo__c, &apos;Antecedencia&apos;),
								ISPICKVAL(Campo__c, &apos;DiaSemana&apos;)
				),		
				OR(
								ISBLANK(ValorNumerico__c),
								NOT(ISBLANK(ValorTexto__c)),
								NOT(ISBLANK(ValorData__c)),
								NOT(ISBLANK(ValorHora__c))
				)
)</errorConditionFormula>
    <errorDisplayField>ValorNumerico__c</errorDisplayField>
    <errorMessage>Para esse campo selecionado, preencha apenas aqui</errorMessage>
</ValidationRule>