force-app/main/default/objects/RegraDesconto__c/validationRules/Texto.validationRule-meta.xml
<ValidationRule>
    <fullName>Texto</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
				OR(
								ISPICKVAL(Campo__c, &apos;Cliente&apos;),
								ISPICKVAL(Campo__c, &apos;Modelo&apos;),
								ISPICKVAL(Campo__c, &apos;CatalogoPrecos&apos;),
								ISPICKVAL(Campo__c, &apos;Origem&apos;),
								ISPICKVAL(Campo__c, &apos;Destino1&apos;),
								ISPICKVAL(Campo__c, &apos;Destino2&apos;),
								ISPICKVAL(Campo__c, &apos;Destino3&apos;),
								ISPICKVAL(Campo__c, &apos;Retorno&apos;)
				),
				OR(
								ISBLANK(ValorTexto__c),
								NOT(ISBLANK(ValorData__c)),
								NOT(ISBLANK(ValorHora__c)),
								NOT(ISBLANK(ValorNumerico__c))
				)
)</errorConditionFormula>
    <errorDisplayField>ValorTexto__c</errorDisplayField>
    <errorMessage>Para esse campo selecionado, preencha apenas aqui</errorMessage>
</ValidationRule>