force-app/main/default/objects/RegraDesconto__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tipo__c</columns>
    <columns>Produto__c</columns>
    <columns>Conta__c</columns>
    <columns>DataFinal__c</columns>
    <columns>DataInicial__c</columns>
    <columns>Desconto__c</columns>
    <columns>Ativo__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>